--- a/p5.html
+++ b/p5.html
@@ -33,11 +33,11 @@
 
             <div id="nav">
                 <ul>
-                    <li><a href="#">首頁</a></li>
-                    <li><a href="#">關於我</a></li>
-                    <li><a href="#">學經歷</a></li>
-                    <li><a href="#">作品集</a></li>
-                    <li><a href="#">連絡我</a></li>
+                    <li><a href="./index.html">首頁</a></li>
+                    <li><a href="./p2.html">關於我</a></li>
+                    <li><a href="./p3.html">學經歷</a></li>
+                    <li><a href="./p4.html">作品集</a></li>
+                    <li><a href="./p5.html">連絡我</a></li>
                 </ul>
             </div>
 
