--- a/p2.html
+++ b/p2.html
@@ -52,7 +52,7 @@
                     <h3>關於我</h3>
                     <ul>
                         <li>陳淑玲</li>
-                        <li>75.4.5</li>
+                        <li>Ling Ling Chen</li>
                         <li>楊梅區</li>
                     </ul>
                     <div class="menu2">
